Add target projection and document cache
